common-applications/om/grafana/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  template:
    spec:
      containers:
      - name: grafana
        image: swr.cn-north-4.myhuaweicloud.com/om/grafana_world:0.0.1
        resources:
          requests:
            cpu: 1000m
            memory: 5120Mi
