common-applications/om/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: http
      nodePort: 31920
      port: 80
